# macadamia

./: .gitignore  shell.nix
notes/: electrical.md
proto1/: Lumberg-010599_06.step  comms-iface.kicad_sch  fp-info-cache  fp-lib-table  macadamia.kicad_pcb  macadamia.kicad_prl  macadamia.kicad_pro  macadamia.kicad_sch
proto1-code/: Cargo.toml  rust-toolchain.toml
proto1-code/.cargo/: config.toml
proto1-code/src/: lib.rs  main.rs
proto1/Lumberg-DIN.pretty/: DIN-45322-010599-06.kicad_mod
